<?xml version="1.0"?>
<package format="2">
  <name>ur_control</name>
  <version>0.1.0</version>
  <description>The ur_control package</description>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>ur_rtde</depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
