<?xml version="1.0"?>
<package format="3">
  <name>ur_control</name>
  <version>1.0.0</version>
  <description>The ur_control package.</description>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ur_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
