<?xml version="1.0"?>
<package format="3">
    <name>ur_control_msgs</name>
    <version>1.0.0</version>
    <description>The ur_control_msgs package</description>
    <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
    <license>BSD</license>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
</package>
